--- a/frameworks/src/FSG.HCM.Core/FSG.HCM.Core.csproj
+++ b/frameworks/src/FSG.HCM.Core/FSG.HCM.Core.csproj
@@ -27,6 +27,8 @@
       <PackageReference Include="Volo.Abp.Ddd.Application" Version="7.3.2" />
       <PackageReference Include="Volo.Abp.Ddd.Domain" Version="7.3.2" />
       <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="7.3.2" />
+      <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL" Version="7.3.2" />
+      <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="7.3.2" />
       <PackageReference Include="Volo.Abp.ObjectMapping" Version="7.3.2" />
       <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="7.22.6" />
     </ItemGroup>
