--- a/modules/Onboarding/host/appsettings.json
+++ b/modules/Onboarding/host/appsettings.json
@@ -4,7 +4,7 @@
   },
   "ConnectionStrings": {
     "Default": "Server=152.70.38.63; Database=FSGHCMDB; User ID=root;Password=Lvkuuki1984;;charset=utf8mb4;Allow User Variables=true;AllowLoadLocalInfile=true;SslMode=none;",
-    "Onboarding": "Server=152.70.38.63; Database=FSGHCMDB; User ID=root;Password=Lvkuuki1984;;charset=utf8mb4;Allow User Variables=true;AllowLoadLocalInfile=true;SslMode=none;"
+    "Onboarding": "Server=192.168.1.232; Database=Onboarding; User=sa; Password=Lvkuuki1984;MultipleActiveResultSets=true;TrustServerCertificate=true;"
   },
   "Redis": {
     "Configuration": "152.70.38.63,password=Lvkuuki1984",
