--- a/services/host/FSG.HCM.HttpApi.Host/FSG.HCM.HttpApi.Host.csproj
+++ b/services/host/FSG.HCM.HttpApi.Host/FSG.HCM.HttpApi.Host.csproj
@@ -45,6 +45,7 @@
     <ItemGroup>
         <ProjectReference Include="..\..\..\frameworks\src\FSG.HCM.CAP.EntityFrameworkCore\FSG.HCM.CAP.EntityFrameworkCore.csproj" />
         <ProjectReference Include="..\..\..\frameworks\src\FSG.HCM.CAP\FSG.HCM.CAP.csproj" />
+        <ProjectReference Include="..\..\..\modules\FlowManagement\src\FSG.HCM.FlowManagement\FSG.HCM.FlowManagement.csproj" />
         <ProjectReference Include="..\..\..\modules\Onboarding\src\FSG.HCM.Onboarding\FSG.HCM.Onboarding.csproj" />
         <ProjectReference Include="..\..\..\shared\FSG.HCM.Shared.Hosting.Microservices\FSG.HCM.Shared.Hosting.Microservices.csproj" />
         <ProjectReference Include="..\..\src\FSG.HCM.Application\FSG.HCM.Application.csproj" />
