--- a/modules/FlowManagement/src/FSG.HCM.FlowManagement/FSG.HCM.FlowManagement.csproj
+++ b/modules/FlowManagement/src/FSG.HCM.FlowManagement/FSG.HCM.FlowManagement.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Humanizer.Core" Version="2.14.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.10" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="7.3.2" />
   </ItemGroup>
 
   <ItemGroup>
