--- a/services/host/FSG.HCM.HttpApi.Host/appsettings.json
+++ b/services/host/FSG.HCM.HttpApi.Host/appsettings.json
@@ -36,7 +36,8 @@
   "ConnectionStrings": {
     "Default": "Server=152.70.38.63; Database=FSGHCMDB; User ID=root;Password=Lvkuuki1984;;charset=utf8mb4;Allow User Variables=true;AllowLoadLocalInfile=true;SslMode=none;",
     "Onboarding": "Server=152.70.38.63; Database=Onboarding; User ID=root;Password=Lvkuuki1984;;charset=utf8mb4;Allow User Variables=true;AllowLoadLocalInfile=true;SslMode=none;",
-    "Flow": "Server=152.70.38.63; Database=Flow; User ID=root;Password=Lvkuuki1984;;charset=utf8mb4;Allow User Variables=true;AllowLoadLocalInfile=true;SslMode=none;"
+    "Flow": "Server=152.70.38.63; Database=Flow; User ID=root;Password=Lvkuuki1984;;charset=utf8mb4;Allow User Variables=true;AllowLoadLocalInfile=true;SslMode=none;",
+    //"Flow": "Server=192.168.1.232; Database=Flow; User=sa; Password=Lvkuuki1984;MultipleActiveResultSets=true;TrustServerCertificate=True;Encrypt=True;"
   },
   "Hangfire": {
     "Redis": {
