增加了薪资计算解析功能

--- a/frameworks/src/FSG.HCM.Core/FSG.HCM.Core.csproj
+++ b/frameworks/src/FSG.HCM.Core/FSG.HCM.Core.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="Aspose.Email" Version="23.7.0" />
       <PackageReference Include="Aspose.PDF" Version="23.8.0" />
       <PackageReference Include="Aspose.Words" Version="23.8.0" />
+      <PackageReference Include="CodingSeb.ExpressionEvaluator" Version="1.4.39" />
       <PackageReference Include="EntityFrameworkCore.DataEncryption" Version="4.0.1" />
       <PackageReference Include="Flee" Version="2.0.0" />
       <PackageReference Include="FreeSql" Version="3.2.700" />
@@ -18,6 +19,7 @@
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
       <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.7.0" />
+      <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.7.0" />
       <PackageReference Include="MySql.Data" Version="8.1.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
       <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
