--- a/modules/vben28/package.json
+++ b/modules/vben28/package.json
@@ -52,10 +52,12 @@
     "dayjs": "^1.11.1",
     "echarts": "^5.3.2",
     "intro.js": "^5.1.0",
+    "jwt-decode": "^3.1.2",
     "lodash-es": "^4.17.21",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
     "nswag": "^13.18.2",
+    "oidc-client": "^1.11.5",
     "path-to-regexp": "^6.2.0",
     "pinia": "2.0.12",
     "print-js": "^1.6.0",
@@ -72,9 +74,8 @@
     "vue-json-pretty": "^2.0.6",
     "vue-router": "^4.0.14",
     "vue-types": "^4.1.1",
-    "xlsx": "^0.18.5",
-    "oidc-client": "^1.11.5",
-    "jwt-decode": "^3.1.2"
+    "vuedraggable": "^2.24.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
