新增了es和rabbitmq的启用

--- a/services/host/FSG.HCM.HttpApi.Host/appsettings.json
+++ b/services/host/FSG.HCM.HttpApi.Host/appsettings.json
@@ -57,17 +57,17 @@
   "Cap": {
     "Enabled": true,
     "RabbitMq": {
-      "HostName": "localhost",
-      "UserName": "admin",
-      "Password": "admin"
+      "HostName": "164.152.166.201",
+      "UserName": "rex",
+      "Password": "Lvkuuki1984"
     }
   },
   "ElasticSearch": {
-    "Enabled": false,
-    "Url": "http://es.cn",
+    "Enabled": true,
+    "Url": "http://164.152.166.201:9200/",
     "IndexFormat": "FSG.HCM.development.{0:yyyy.MM.dd}",
-    "UserName": "elastic",
-    "Password": "aVVhjQ95RP7nbwNy",
+    "UserName": "rex",
+    "Password": "Lvkuuki1984",
     "SearchIndexFormat": "FSG.HCM.development*"
   },
   "Consul": {
