--- a/frameworks/src/FSG.HCM.Core/FSG.HCM.Core.csproj
+++ b/frameworks/src/FSG.HCM.Core/FSG.HCM.Core.csproj
@@ -22,6 +22,7 @@
       <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.7.0" />
       <PackageReference Include="MySql.Data" Version="8.1.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+      <PackageReference Include="Senparc.Weixin" Version="6.16.4" />
       <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
       <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="7.3.2" />
       <PackageReference Include="Volo.Abp.AutoMapper" Version="7.3.2" />
