--- a/modules/Onboarding/src/FSG.HCM.Onboarding/FSG.HCM.Onboarding.csproj
+++ b/modules/Onboarding/src/FSG.HCM.Onboarding/FSG.HCM.Onboarding.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Hangfire.Core" Version="1.8.2" />
     <PackageReference Include="Humanizer.Core" Version="2.14.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.10" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
