--- a/frameworks/src/FSG.HCM.Core/FSG.HCM.Core.csproj
+++ b/frameworks/src/FSG.HCM.Core/FSG.HCM.Core.csproj
@@ -23,6 +23,8 @@
       <PackageReference Include="MySql.Data" Version="8.1.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
       <PackageReference Include="Senparc.Weixin" Version="6.16.4" />
+      <PackageReference Include="Senparc.Weixin.MP" Version="16.19.3" />
+      <PackageReference Include="Senparc.Weixin.WxOpen" Version="3.16.3" />
       <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
       <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="7.3.2" />
       <PackageReference Include="Volo.Abp.AutoMapper" Version="7.3.2" />
