--- a/modules/Onboarding/src/FSG.HCM.Onboarding/FSG.HCM.Onboarding.csproj
+++ b/modules/Onboarding/src/FSG.HCM.Onboarding/FSG.HCM.Onboarding.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="Humanizer.Core" Version="2.14.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.10" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Senparc.Weixin.MP" Version="16.19.3" />
+    <PackageReference Include="Senparc.Weixin.MP.Middleware" Version="0.8.6" />
     <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="7.3.2" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="7.3.2" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL" Version="7.3.2" />
