--- a/services/host/FSG.HCM.HttpApi.Host/FSG.HCM.HttpApi.Host.csproj
+++ b/services/host/FSG.HCM.HttpApi.Host/FSG.HCM.HttpApi.Host.csproj
@@ -6,11 +6,14 @@
         <RootNamespace>FSG.HCM</RootNamespace>
         <PreserveCompilationReferences>true</PreserveCompilationReferences>
         <UserSecretsId>FSG.HCM-4681b4fd-151f-4221-84a4-929d86723e4c</UserSecretsId>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <DockerfileContext>..\..\..</DockerfileContext>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
         <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" />
+        <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.4" />
         <PackageReference Include="Volo.Abp.Account.Web" />
         <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.MultiTenancy" />
         <PackageReference Include="Volo.Abp.Autofac" />
