--- a/services/host/FSG.HCM.HttpApi.Host/FSG.HCM.HttpApi.Host.csproj
+++ b/services/host/FSG.HCM.HttpApi.Host/FSG.HCM.HttpApi.Host.csproj
@@ -66,4 +66,10 @@
     <ItemGroup>
         <Content Remove="$(UserProfile)\.nuget\packages\*\*\contentFiles\any\*\*.abppkg*.json" />
     </ItemGroup>
+
+    <ItemGroup>
+      <None Update="Dockerfile">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
 </Project>
