--- a/services/host/FSG.HCM.HttpApi.Host/appsettings.Production.json
+++ b/services/host/FSG.HCM.HttpApi.Host/appsettings.Production.json
@@ -34,19 +34,19 @@
     "CorsOrigins": "https://*.HCM.com,http://localhost:4200,http://localhost:3100"
   },
   "ConnectionStrings": {
-    "Default": "Server=localhost; Database=FSGHCMDB; User ID=root;Password=Lvkuuki1984;;charset=utf8mb4;Allow User Variables=true;AllowLoadLocalInfile=true;SslMode=none;",
-    "Onboarding": "Server=localhost; Database=Onboarding; User ID=root;Password=Lvkuuki1984;;charset=utf8mb4;Allow User Variables=true;AllowLoadLocalInfile=true;SslMode=none;",
-    "Flow": "Server=localhost; Database=Flow; User ID=root;Password=Lvkuuki1984;;charset=utf8mb4;Allow User Variables=true;AllowLoadLocalInfile=true;SslMode=none;"
+    "Default": "Server=164.152.166.201; Database=FSGHCMDB; User ID=root;Password=Lvkuuki1984;;charset=utf8mb4;Allow User Variables=true;AllowLoadLocalInfile=true;SslMode=none;",
+    "Onboarding": "Server=164.152.166.201; Database=Onboarding; User ID=root;Password=Lvkuuki1984;;charset=utf8mb4;Allow User Variables=true;AllowLoadLocalInfile=true;SslMode=none;",
+    "Flow": "Server=164.152.166.201; Database=Flow; User ID=root;Password=Lvkuuki1984;;charset=utf8mb4;Allow User Variables=true;AllowLoadLocalInfile=true;SslMode=none;"
     //"Flow": "Server=192.168.1.232; Database=Flow; User=sa; Password=Lvkuuki1984;MultipleActiveResultSets=true;TrustServerCertificate=True;Encrypt=True;"
   },
   "Hangfire": {
     "Redis": {
-      "Host": "localhost:6379,password=Lvkuuki1984",
+      "Host": "164.152.166.201:6379,password=Lvkuuki1984",
       "DB": "2"
     }
   },
   "Redis": {
-    "Configuration": "localhost,password=Lvkuuki1984,defaultdatabase=1"
+    "Configuration": "164.152.166.201,password=Lvkuuki1984,defaultdatabase=1"
   },
   "Jwt": {
     "Audience": "FSG.HCM",
@@ -84,7 +84,7 @@
     "IsDebug": true,
     "DefaultCacheNamespace": "DefaultCache",
     //分布式缓存
-    "Cache_Redis_Configuration": "localhost,password=Lvkuuki1984,defaultdatabase=1",
+    "Cache_Redis_Configuration": "164.152.166.201,password=Lvkuuki1984,defaultdatabase=1",
     //"Cache_Redis_Configuration": "localhost:6379",
     "Cache_Memcached_Configuration": "Memcached配置",
     "SenparcUnionAgentKey": "SenparcUnionAgentKey"
