--- a/modules/vben28/Dockerfile
+++ b/modules/vben28/Dockerfile
@@ -1,3 +1,11 @@
+FROM node:16-alpine as build-stage
+WORKDIR /appweb
+COPY . ./
+ENV NODE_OPTIONS=--max-old-space-size=16384
+RUN npm install pnpm -g
+RUN pnpm i
+RUN pnpm build
+
 FROM nginx:1.17.3-alpine as base
 EXPOSE 80
 
