--- a/modules/vben28/.env.production
+++ b/modules/vben28/.env.production
@@ -36,8 +36,8 @@ VITE_LEGACY = false
 
 
 # 接口地址
-VITE_API_URL= http://116.205.177.85:8080
+VITE_API_URL= https://api.onboarding.com.cn
 
 
 # WEBSOCKE 地址
-VITE_WEBSOCKE_URL= http://116.205.177.85:8080/signalr/notification
+VITE_WEBSOCKE_URL= https://api.onboarding.com.cn/signalr/notification
