--- a/services/host/FSG.HCM.HttpApi.Host/appsettings.json
+++ b/services/host/FSG.HCM.HttpApi.Host/appsettings.json
@@ -31,7 +31,7 @@
   },
   "App": {
     "SelfUrl": "http://localhost:44315",
-    "CorsOrigins": "https://*.HCM.com,http://localhost:4200,http://localhost:3100"
+    "CorsOrigins": "https://*.HCM.com,http://localhost:4200,http://localhost:3100,https://onboarding.com.cn"
   },
   "ConnectionStrings": {
     "Default": "Server=152.70.38.63; Database=FSGHCMDB; User ID=root;Password=Lvkuuki1984;;charset=utf8mb4;Allow User Variables=true;AllowLoadLocalInfile=true;SslMode=none;",
