--- a/services/host/FSG.HCM.HttpApi.Host/appsettings.json
+++ b/services/host/FSG.HCM.HttpApi.Host/appsettings.json
@@ -57,7 +57,7 @@
   "Cap": {
     "Enabled": true,
     "RabbitMq": {
-      "HostName": "164.152.166.201:15672",
+      "HostName": "http://164.152.166.201:15672",
       "UserName": "rex",
       "Password": "Lvkuuki1984"
     }
