乱改之前，vue3可以正常的运行，后续准备加入nswag 来处理标准的接口

--- a/modules/vue3/package.json
+++ b/modules/vue3/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.3",
   "private": true,
   "scripts": {
+    "nswag": "cd nswag &.\\refresh.bat",
     "dev": "cross-env vite --mode localhost",
     "debug-vite": "cross-env vite --mode localhost --debug",
     "build": "vite build",
