--- a/modules/vue3/package.json
+++ b/modules/vue3/package.json
@@ -24,6 +24,9 @@
     "@aesoper/normal-utils": "0.1.5",
     "@ant-design/icons-vue": "^7.0.1",
     "@antv/g2plot": "^2.4.26",
+    "@grapecity/spread-excelio": "^16.2.4",
+    "@grapecity/spread-sheets": "^16.2.4",
+    "@grapecity/spread-sheets-vue": "^16.2.4",
     "@logicflow/core": "^1.2.1",
     "@logicflow/extension": "^1.2.1",
     "@vueuse/core": "^10.5.0",
@@ -32,6 +35,7 @@
     "crypto-js": "4.1.1",
     "dayjs": "1.11.10",
     "echarts": "^5.4.2",
+    "file-saver": "^2.0.5",
     "less": "4.1.3",
     "less-loader": "11.1.0",
     "lodash.clonedeep": "4.5.0",
@@ -81,5 +85,10 @@
     "vite-plugin-vue-setup-extend": "0.4.0",
     "vitest": "0.29.1",
     "vue-tsc": "1.8.5"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "@grapecity/spread-sheets@16.2.4": "patches/@grapecity__spread-sheets@16.2.4.patch"
+    }
   }
 }
